# crabvision

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  ROADMAP_PARITY.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml  wheels.yml
examples/: smoke_test.py
py/opencv-rust/: README.md  pyproject.toml
python/: .gitignore  __init__.py
scripts/: sync_upstream_tests.sh
src/: lib.rs
tests/: conftest.py  test_basic_cv2.py  test_canny.py  test_derivatives.py  test_filtering.py  test_morphology_ops.py  test_numeric_dtypes.py  test_safety_no_crash.py  test_transforms.py  test_upstream_ported_bitwise_threshold.py  test_upstream_ported_imread.py  test_upstream_ported_imread_buffer.py  test_upstream_ported_inrange_copyto.py  test_upstream_ported_norm.py
