[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "crabvision"
version = "0.0.3"
description = "Rust-native OpenCV-like cv2 module (MVP: imread, imwrite, cvtColor, resize)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.22",
]
license = { text = "MIT" }
authors = [{ name = "CrabVision Contributors" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/viraatdas/crabvision"
Repository = "https://github.com/viraatdas/crabvision"

[tool.maturin]
module-name = "cv2"
features = []

[tool.cibuildwheel]
# Keep in sync with the supported PyO3 / CPython range.
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux*"
archs-linux = ["x86_64"]
test-command = "python -c \"import cv2, numpy as np; img=np.zeros((8,8,3),np.uint8); out=cv2.GaussianBlur(img,(3,3),1.0); assert out.shape==img.shape\""
